--- a/datacollector/app/src/main/res/layout/input_start.xml
+++ b/datacollector/app/src/main/res/layout/input_start.xml
@@ -27,7 +27,7 @@
 
             <Button
                 android:id="@+id/inputStart_selectScanPointBtn"
-                android:layout_width="150dp"
+                android:layout_width="150dip"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:text="@string/input_start_select_scan_point" />
@@ -37,12 +37,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="30dip"
         android:orientation="vertical" >
 
         <Button
+            android:id="@+id/inputStart_workWithLoggerBtn"
+            android:layout_width="300dip"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="@string/input_start_work_with_logger" />
+
+        <Button
             android:id="@+id/inputStart_proceedInputBtn"
-            android:layout_width="150dp"
+            android:layout_width="300dip"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:text="@string/input_start_proceed_input" />
