--- a/datacollector/app/src/main/res/layout/input_bclogger_dataload.xml
+++ b/datacollector/app/src/main/res/layout/input_bclogger_dataload.xml
@@ -20,11 +20,18 @@
             android:text="@string/input_bclogger_dataload_get_log" />
 
         <Button
-            android:id="@+id/inputBCLoggerDataload_getDebugButton"
+            android:id="@+id/inputBCLoggerDataload_getErrorsButton"
             android:layout_width="250dip"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/global_padding"
             android:text="@string/input_bclogger_dataload_get_debug" />
+
+        <Button
+            android:id="@+id/inputBCLoggerDataload_clearConsoleButton"
+            android:layout_width="250dip"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/global_padding"
+            android:text="@string/input_bclogger_dataload_clear_console" />
 
         <!--
         <Button
