--- a/datacollector/datacollector_tablet/app/src/main/res/layout/settings.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/layout/settings.xml
@@ -6,7 +6,8 @@
     android:paddingBottom="@dimen/global_padding"
     android:paddingLeft="@dimen/global_padding"
     android:paddingRight="@dimen/global_padding"
-    android:paddingTop="@dimen/global_padding">
+    android:paddingTop="@dimen/global_padding"
+    >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -170,7 +171,7 @@
                 <RadioGroup
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <RadioButton
                         android:id="@+id/settings_appModeInputRadio"
@@ -182,9 +183,62 @@
                         android:id="@+id/settings_appModeReportRadio"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/global_padding"
                         android:text="@string/settings_application_mode_report" />
                 </RadioGroup>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/global_padding">
+
+                <TextView
+                    android:layout_width="250dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_data_server_url"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                <EditText
+                    android:id="@+id/settings_dataServerUrlEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/global_padding">
+
+                <TextView
+                    android:layout_width="250dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_data_server_user_name"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                <EditText
+                    android:id="@+id/settings_dataServerUserNameEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/global_padding">
+
+                <TextView
+                    android:layout_width="250dip"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_data_server_password"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                <EditText
+                    android:id="@+id/settings_dataServerPasswordEdit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
