--- a/datacollector/datacollector_tablet/app/src/main/res/layout/results.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/layout/results.xml
@@ -15,10 +15,18 @@
         android:orientation="vertical" >
 
         <Button
+            android:id="@+id/results_searchTeamOnPoint"
+            android:layout_width="@dimen/main_button_width"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/results_search_team_on_point" />
+
+        <Button
             android:id="@+id/results_showTeamReport"
             android:layout_width="@dimen/main_button_width"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/global_padding"
             android:text="@string/results_team_report" />
 
         <Button
