datacollector_tablet Поиск команды на точке: добавлено количество пришедших команд, реализована альбомная раскладка.

--- a/datacollector/datacollector_tablet/app/src/main/res/layout/report_team_search.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/layout/report_team_search.xml
@@ -14,7 +14,32 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:gravity="right">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/report_team_search_teams_count" />
+
+            <TextView
+                android:id="@+id/teamSearch_teamsCountTextView"
+                android:layout_width="50dip"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/global_padding"
+                android:gravity="right"
+                android:textAlignment="gravity"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="25" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/global_padding">
 
             <Button
                 android:id="@+id/teamSearch_filterClearButton"
@@ -156,7 +181,7 @@
     <ListView
         android:id="@+id/teamSearch_teamsList"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:choiceMode="singleChoice" >
     </ListView>
