--- a/datacollector/datacollector_tablet/app/src/main/res/layout/transport_report.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/layout/transport_report.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/global_padding"
     android:paddingLeft="@dimen/global_padding"
     android:paddingRight="@dimen/global_padding"
-    android:paddingTop="@dimen/global_padding">
+    android:paddingTop="@dimen/global_double_padding">
 
     <Button
         android:id="@+id/transportReport_importDictionariesBtn"
@@ -20,7 +20,7 @@
         android:layout_width="@dimen/main_button_width"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/global_padding"
+        android:layout_marginTop="@dimen/global_double_padding"
         android:text="@string/transport_report_receive_from_server" />
 
     <Button
@@ -28,7 +28,7 @@
         android:layout_width="@dimen/main_button_width"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/global_padding"
+        android:layout_marginTop="@dimen/global_double_padding"
         android:text="@string/transport_report_receive_logger_data" />
 
 </LinearLayout>
