--- a/datacollector/datacollector_tablet/app/src/main/res/layout/input_bclogger_start.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/layout/input_bclogger_start.xml
@@ -52,7 +52,7 @@
             android:layout_width="300dip"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginTop="@dimen/global_padding"
+            android:layout_marginTop="@dimen/global_double_padding"
             android:text="@string/input_bclogger_start_load_data" />
     </LinearLayout>
 
