--- a/datacollector/datacollector_tablet/app/src/main/res/layout/input_data_checkpoints.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/layout/input_data_checkpoints.xml
@@ -66,6 +66,27 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/inputData_datePanel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/global_padding" >
+
+            <DatePicker
+                android:id="@+id/inputData_datePicker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:calendarViewShown="false"
+                android:datePickerMode="spinner"/>
+
+            <LinearLayout
+                android:id="@+id/inputData_timePanel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/global_padding"
+                android:orientation="horizontal" />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/inputData_checkpointsTopPanel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
