datacollector импорт данных со сканера, убраны лишние пункты меню

--- a/datacollector/datacollector_tablet/app/src/main/res/layout/main.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/layout/main.xml
@@ -34,12 +34,12 @@
                 android:text="@string/main_input_data" />
 
             <Button
-                android:id="@+id/main_resultsBtn"
+                android:id="@+id/main_searchTeamBtn"
                 android:layout_width="@dimen/main_button_width"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/global_double_padding"
-                android:text="@string/main_results" />
+                android:text="@string/main_search_team_on_point" />
 
             <Button
                 android:id="@+id/main_settingsBtn"
