datacollector обязательное КП исправление багов

--- a/datacollector/datacollector_tablet/app/src/main/res/layout/input_data_checkpoints.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/layout/input_data_checkpoints.xml
@@ -6,17 +6,17 @@
     android:paddingBottom="@dimen/global_padding"
     android:paddingLeft="@dimen/global_padding"
     android:paddingRight="@dimen/global_padding"
-    android:paddingTop="@dimen/global_padding" >
+    android:paddingTop="@dimen/global_padding">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="right" >
+            android:layout_gravity="right">
 
             <LinearLayout
                 android:id="@+id/inputData_existsIndicatorPanel"
@@ -26,18 +26,18 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="@dimen/global_padding"
                 android:background="@color/LightSkyBlue" />
-            
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left" >
+                    android:layout_gravity="left">
 
                     <TextView
                         android:id="@+id/inputData_teamNumberTextView"
@@ -69,14 +69,14 @@
             android:id="@+id/inputData_datePanel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/global_padding" >
+            android:layout_marginTop="@dimen/global_padding">
 
             <DatePicker
                 android:id="@+id/inputData_datePicker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:calendarViewShown="false"
-                android:datePickerMode="spinner"/>
+                android:datePickerMode="spinner" />
 
             <LinearLayout
                 android:id="@+id/inputData_timePanel"
@@ -84,6 +84,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/global_padding"
                 android:orientation="horizontal" />
+
+            <Button
+                android:id="@+id/inputData_editDateButton"
+                android:layout_width="100dip"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/global_padding"
+                android:text="@string/input_data_edit_date" />
         </LinearLayout>
 
         <LinearLayout
@@ -91,11 +99,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/global_double_padding"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
 
                 <Button
                     android:id="@+id/inputData_checkAllButton"
@@ -115,19 +123,18 @@
                 android:id="@+id/inputData_checkpointsPanel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/global_padding" >
-            </TableLayout>
+                android:layout_marginTop="@dimen/global_padding"></TableLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
 
                 <TextView
@@ -143,7 +150,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
-                    android:layout_marginTop="@dimen/global_padding" >
+                    android:layout_marginTop="@dimen/global_padding">
 
                     <Button
                         android:id="@+id/inputData_okButton"
