--- a/datacollector/datacollector_tablet/app/src/main/res/layout-land/input_data_checkpoints.xml
+++ b/datacollector/datacollector_tablet/app/src/main/res/layout-land/input_data_checkpoints.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:paddingBottom="@dimen/global_padding"
     android:paddingLeft="@dimen/global_padding"
     android:paddingRight="@dimen/global_padding"
-    android:paddingTop="@dimen/global_padding" >
+    android:paddingTop="@dimen/global_padding">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="right" >
-            
+            android:layout_gravity="right">
+
             <LinearLayout
                 android:id="@+id/inputData_existsIndicatorPanel"
                 android:orientation="horizontal"
@@ -33,12 +32,12 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left" >
+                    android:layout_gravity="left">
 
                     <TextView
                         android:id="@+id/inputData_teamNumberTextView"
@@ -70,7 +69,7 @@
             android:id="@+id/inputData_datePanel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/global_padding" >
+            android:layout_marginTop="@dimen/global_padding">
 
             <DatePicker
                 android:id="@+id/inputData_datePicker"
@@ -86,12 +85,20 @@
                 android:layout_marginLeft="@dimen/global_padding"
                 android:orientation="horizontal" />
 
+            <Button
+                android:id="@+id/inputData_editDateButton"
+                android:layout_width="100dip"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/global_padding"
+                android:text="@string/input_data_edit_date" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_marginLeft="@dimen/global_padding"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/inputData_resultTextView"
@@ -116,11 +123,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/global_double_padding"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
 
                 <Button
                     android:id="@+id/inputData_checkAllButton"
@@ -140,8 +147,7 @@
                 android:id="@+id/inputData_checkpointsPanel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/global_padding" >
-            </TableLayout>
+                android:layout_marginTop="@dimen/global_padding"></TableLayout>
         </LinearLayout>
     </LinearLayout>
 
