bc_reader loggermanager small bugfixes

--- a/bc_reader/android/loggermanager/app/src/main/res/layout-normal/activity_main.xml
+++ b/bc_reader/android/loggermanager/app/src/main/res/layout-normal/activity_main.xml
@@ -433,23 +433,19 @@
                 android:layout_height="200dp">
 
             </TableLayout>
+
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/main_consolePanel"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/activity_small_margin"
-            android:orientation="vertical"
-            android:theme="@style/AppTheme">
+            android:orientation="vertical">
 
             <ScrollView
                 android:id="@+id/main_consoleScrollView"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="@dimen/activity_small_margin"
-                android:layout_weight="1"
-                android:fillViewport="true">
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/main_consoleTextView"
@@ -458,6 +454,7 @@
                     android:inputType="textMultiLine" />
             </ScrollView>
         </LinearLayout>
+
     </ViewFlipper>
 
     <TextView
